<resources>
    <string name="app_name">MyGameVault</string>

    <string name="library">Könyvtár</string>
    <string name="wishlist">Kívánságlista</string>
    <string name="search">Keresés</string>
    <string name="feed">Aktivitás</string>
    <string name="settings">Beállítások</string>

    <string name="title_login">Jelentkezz be a folytatáshoz!</string>
    <string name="email">E-mail cím</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="login_to_register">Nincs még fiókod? Regisztrálj!</string>
    <string name="success_login">Sikeres bejelentkezés!</string>
    <string name="error_invalid_credentials">Hibás e-mail cím vagy jelszó!</string>
    <string name="error_occurred">Hiba történt: %s</string>
    <string name="error_unknown">Ismeretlen hiba történt.</string>
    <string name="reset_password_instruction">Add meg az emailben kapott 8 jegyű kódot, valamint az új jelszavadat!</string>
    <string name="otp_code_hint">8 jegyű kód (OTP)</string>
    <string name="error_otp_length">A kódnak 8 számjegyből kell állnia!</string>
    <string name="reset_password_title">Új jelszó megadása</string>
    <string name="forgot_password">Elfelejtetted a jelszavad?</string>
    <string name="forgot_password_instruction">Add meg a fiókodhoz tartozó email címet. Küldeni fogunk egy ellenőrző kódot a jelszavad visszaállításához.</string>
    <string name="send">Küldés</string>
    <string name="success_password_reset_email">A 8 jegyű kódot elküldtük az email címedre!</string>
    <string name="error_password_reset">Hiba történt az email küldése közben.</string>
    <string name="error_invalid_otp">Hibás vagy lejárt ellenőrző kód!</string>
    <string name="error_otp_required">Ellenőrző kód megadása kötelező!</string>

    <string name="register">Regisztráció</string>
    <string name="password_confirm">Jelszó újra</string>
    <string name="register_button">Fiók létrehozása</string>
    <string name="register_to_login">Már van fiókod? Lépj be!</string>
    <string name="error_email_required">E-mail cím megadása kötelező!</string>
    <string name="error_password_required">Jelszó megadása kötelező!</string>
    <string name="error_password_confirm_required">Jelszó megerősítése kötelező!</string>
    <string name="error_passwords_mismatch">A jelszavak nem egyeznek!</string>
    <string name="error_password_too_short">A jelszónak legalább 6 karakter hosszúnak kell lennie!</string>
    <string name="error_email_registered">Ez az e-mail cím már regisztrálva van.</string>
    <string name="error_network">Hálózati hiba: %s</string>
    <string name="success_registration">Sikeres regisztráció! Most már bejelentkezhetsz.</string>
    <string name="error_invalid_email">Adjon meg egy érvényes e-mail címet!</string>
    <string name="error_weak_password">A jelszónak min. 8 karakterből kell állnia, tartalmaznia kell kis/nagybetűt, számot és speciális karaktert.</string>

    <string name="logout">Kijelentkezés</string>
    <string name="logout_message">Biztosan ki szeretnél jelentkezni?</string>
    <string name="success_logout">Sikeres kijelentkezés.</string>
    <string name="language_select">Nyelv kiválasztása</string>
    <string name="profile_section_label">Profil</string>
    <string name="change_picture_hint">Koppints a kép módosításához</string>
    <string name="username_hint">Felhasználónév</string>
    <string name="save_profile_button">Profil mentése</string>
    <string name="app_section_label">Alkalmazás</string>
    <string name="profile_saved_successfully">Profil sikeresen mentve!</string>
    <string name="error_saving_profile">Hiba a profil mentésekor!</string>
    <string name="error_uploading_image">Hiba a kép feltöltésekor!</string>
    <string name="error_username_taken">Ez a felhasználónév már foglalt!</string>
    <string name="error_username_required">A felhasználónév mező kitöltése kötelező!</string>
    <string name="error_unsupported_image_format">Nem támogatott képformátum!</string>
    <string name="dark_mode">Sötét mód</string>
    <string name="delete_account">Fiók törlése</string>
    <string name="delete_account_confirmation">Biztosan törölni szeretnéd a fiókodat? Ez a művelet nem vonható vissza, és minden adatod véglegesen törlődik.</string>
    <string name="error_deleting_account">Hiba történt a fiók törlése során.</string>
    <string name="account_deleted_successfully">Fiók sikeresen törölve.</string>
    <string name="new_password">Új jelszó</string>
    <string name="confirm_new_password">Új jelszó megerősítése</string>
    <string name="change_password">Jelszó megváltoztatása</string>
    <string name="save">Mentés</string>
    <string name="password_changed_successfully">Jelszó sikeresen megváltoztatva!</string>
    <string name="error_changing_password">Hiba történt a jelszó módosítása során!</string>

    <string name="yes">Igen</string>
    <string name="cancel">Mégsem</string>

    <string name="cover">Borító</string>
    <string name="add_to_library">Könyvtárhoz ad</string>
    <string name="add_to_wishlist">Kívánságlistához ad</string>
    <string name="unknown_year">Ismeretlen év</string>
    <string name="unknown_publisher">Ismeretlen kiadó</string>
    <string name="format_release_year">Kiadási év: %1$s</string>
    <string name="format_publisher">Kiadó: %1$s</string>
    <string name="error_download">Hiba a letöltésnél</string>
    <string name="error_search">Hiba a keresésnél</string>
    <string name="no_results">Nincs találat a keresett játékra.</string>
    <string name="game_added_library">Játék hozzáadva a könyvtárhoz!</string>
    <string name="game_added_wishlist">Játék hozzáadva a kívánságlistához!</string>
    <string name="error_save">Hiba a játék mentésekor!</string>
    <string name="error_save_failed">Mentési hiba történt.</string>
    <string name="error_unknown_supabase">Ismeretlen hiba</string>

    <string name="delete_game">Játék törlése</string>
    <string name="status_owned">Birtokolt</string>
    <string name="status_in_progress">Folyamatban</string>
    <string name="status_finished">Végigjátszott</string>
    <string name="sort_by">Rendezés</string>
    <string name="unknown_game">Ismeretlen játék</string>
    <string name="status_label">Státusz: %1$s</string>
    <string name="error_data_load">Hiba az adatok betöltésekor!</string>
    <string name="error_network_base">Hálózati hiba!</string>
    <string name="delete_title">Törlés</string>
    <string name="delete_message_library">Biztosan törölni szeretnéd a(z) %1$s nevű játékot a könyvtáradból?</string>
    <string name="delete_success">Játék sikeresen törölve!</string>
    <string name="delete_error">Hiba történt a törlés során!</string>
    <string name="empty_library">Nincsenek játékok a könyvtáradban.</string>
    <string name="favorites">Kedvencek</string>

    <string name="delete_message_wishlist">Biztosan törölni szeretnéd a(z) %1$s nevű játékot a kívánságlistádról?</string>
    <string name="lowest_price_format">Legalacsonyabb ár: %1$s$ (%2$s)</string>
    <string name="price_not_found">Legalacsonyabb ár: Nem található</string>
    <string name="channel_wishlist_name">Akciók és leárazások</string>
    <string name="channel_wishlist_desc">Értesítések a kívánságlistán szereplő játékok áreséseiről</string>
    <string name="notif_price_drop_title">A kívánságlistádon szereplő egyik játék leárazásra került!</string>
    <string name="notif_price_drop_expanded">%1$s\nÚj ár: %2$s</string>
    <string name="notif_price_drop_collapsed">%1$s - Új ár: %2$s</string>
    <string name="empty_wishlist">Nincsenek játékok a kívánságlistádon.</string>

    <string name="game_details_header">Játék részletei</string>
    <string name="game_status_hint">Jelenlegi állapot</string>
    <string name="your_rating_label">Értékelésed:</string>
    <string name="personal_note_hint">Saját vélemény</string>
    <string name="save_changes_button">Változások mentése</string>
    <string name="save_success">Sikeres mentés!</string>
    <string name="platforms_label">Platformok:</string>
    <string name="game_modes_label">Játékmódok:</string>
    <string name="summary_label">Rövid leírás:</string>
    <string name="genres_label">Műfajok:</string>
    <string name="unknown_developer">Ismeretlen fejlesztő</string>
    <string name="developer_format">Fejlesztő: %1$s</string>
    <string name="developer_unknown">Fejlesztő: Ismeretlen</string>
    <string name="no_summary_found">Ehhez a játékhoz nem található leírás.</string>
    <string name="error_igdb_extra_data">Nem sikerült letölteni az extra adatokat.</string>
    <string name="error_no_internet_extra_data">Nincs internetkapcsolat az extra adatok letöltéséhez.</string>

    <string name="game_details_title">Játék részletei</string>
    <string name="game_prices_title">A játék ára(i):</string>
    <string name="error_loading_prices">Hiba az árak betöltésekor!</string>
    <string name="price_not_found_wdw">Ár nem található</string>

    <string name="find_users">Felhasználók keresése</string>
    <string name="content_desc_follow">Követés</string>
    <string name="tab_all_users">Összes</string>
    <string name="tab_following_users">Követések</string>
    <string name="empty_following">Nem követsz egy felhasználót sem.</string>

    <string name="unknown_user">Ismeretlen felhasználó</string>
    <string name="unknown_game_feed">egy játékot</string>
    <string name="feed_action_added_library">Hozzáadta a(z) %s játékot a könyvtárához.</string>
    <string name="feed_action_added_wishlist">Hozzáadta a(z) %s játékot a kívánságlistájához.</string>
    <string name="feed_action_in_progress">Elkezdte a(z) %s végigjátszását.</string>
    <string name="feed_action_completed">Végigjátszotta a(z) %s játékot.</string>
    <string name="feed_action_reviewed">Értékelte ezt a játékot: %s.</string>
    <string name="feed_action_updated">Frissítette ezt a játékot: %s.</string>
    <string name="empty_feed_message">Még nem követsz egy felhasználót sem. Kövess be valakit, hogy lásd a tevékenységeit!</string>
    <string name="feed_action_added_favorites">Hozzáadta a(z) %1$s játékot a kedvenceihez.</string>
    <string name="profile_picture">Profilkép</string>

    <string name="statistics">Statisztikák</string>
    <string name="chart_title_completed_games">Végigjátszott játékok száma hónapokra bontva:</string>
    <string name="completion_rate">Végigjátszási arány</string>
    <string name="status_wishlist">Kívánságlista</string>
    <string name="reviews_count">Értékelések</string>
    <string name="average_rating">Átlagos értékelés</string>
    <string name="completed_games_chart_label">Végigjátszott játékok</string>
    <string name="social_stats_format">%1$d Követő | %2$d Követett</string>

    <string-array name="sort_options">
        <item>Név (A-Z)</item>
        <item>Név (Z-A)</item>
        <item>Kiadási év (Legújabb)</item>
        <item>Kiadási év (Legrégebbi)</item>
    </string-array>

    <string name="status_filter">Állapot</string>
    <string-array name="status_filter_options">
        <item>Minden játék</item>
        <item>Birtokolt</item>
        <item>Folyamatban</item>
        <item>Végigjátszott</item>
    </string-array>

    <string-array name="short_months">
        <item>Jan.</item>
        <item>Feb.</item>
        <item>Már.</item>
        <item>Ápr.</item>
        <item>Máj.</item>
        <item>Jún.</item>
        <item>Júl.</item>
        <item>Aug.</item>
        <item>Szep.</item>
        <item>Okt.</item>
        <item>Nov.</item>
        <item>Dec.</item>
    </string-array>
</resources>